--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -21,7 +21,8 @@ $user = getUser($_GET['email']);
     </div>
 
     <div class="form-container col-md-6">
-        <form name="editMember" class="form-horizontal">
+        <form name="editMember" class="form-horizontal" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+            <input type="hidden" name="username" value="<?php echo $user->getPrimaryEmail();?>">
             <div class="form-group">
                 <label for="firstName" class="control-label">First Name</label>  
                 <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
