--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -13,7 +13,7 @@
     <table class="table table-striped table-bordered" style="text-align: center">
         <tr>
             <th></th>
-            <th>Name</th>
+            <th>NameDana</th>
             <th>Email</th>
             <th>RFID Tag #</th>
             <th>Membership Plan</th>
