--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -9,14 +9,16 @@
 		<script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
-				$('#example').DataTable();
+				$('#example').DataTable( {
+                    "order": [[ 1, "desc" ]]
+                } );
 			} );
 		</script>
 	</head>
 	<body>
 		<div class="container">
 
-            <table id="example" class="display" cellspacing="0" width="100%">
+            <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th></th>
@@ -31,6 +33,7 @@
                     <?php include 'admin-member-data.php'; ?>
                 </tbody>
             </table>
+            
 		</div>
 	</body>
 </html>
