--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -1,16 +1,12 @@
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		
-		<title>DataTables Bootstrap 3 example</title>
-
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
  
 		<script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
 				$('#example').DataTable( {
-                    "order": [[ 1, "desc" ]]
+                    "order": [[ 0, "desc" ]]
                 } );
 			} );
 		</script>
@@ -21,8 +17,7 @@
             <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-                        <th></th>
-                        <th>NameDana</th>
+                        <th>Name</th>
                         <th>Email</th>
                         <th>RFID Tag #</th>
                         <th>Membership Plan</th>
