--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -5,16 +5,14 @@
 		<script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
 			$(document).ready(function() {
-				$('#example').DataTable( {
-                    "order": [[ 0, "desc" ]]
-                } );
+				$('#member_table').DataTable();
 			} );
 		</script>
 	</head>
 	<body>
 		<div class="container">
 
-            <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
                     <tr>
                         <th>Name</th>
