--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
+        <link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">
  
 		<script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
 		<script type="text/javascript" charset="utf-8">
@@ -9,10 +10,10 @@
 			} );
 		</script>
 	</head>
-	<body>
+	<body  style="background-color: #EBEBEB">
 		<div class="container">
 
-            <table id="member_table" class="table table-striped table-bordered" width="100%">
+            <table id="member_table" class="table table-striped table-bordered" width="80%">
                 <thead>
                     <tr>
                         <th>Name</th>
