--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -10,10 +10,10 @@
 			} );
 		</script>
 	</head>
-	<body  style="background-color: #EBEBEB">
-		<div class="container">
+	<body  style="background-color: #F1F1F1">
+		<div class="container" width="80%">
 
-            <table id="member_table" class="table table-striped table-bordered" width="80%">
+            <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
                     <tr>
                         <th>Name</th>
