--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -25,7 +25,7 @@
                         <th>Email</th>
                         <th>RFID Tag #</th>
                         <th>Membership Plan</th>
-                        <th>Subscription Status</th>
+                        <th style="width:140px;">Subscription Status</th>
                     </tr>
                 </thead>
                 <tbody>
