--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -21,10 +21,10 @@
             <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
                     <tr>
-                        <th>Name</th>
-                        <th>Email</th>
-                        <th>RFID Tag #</th>
-                        <th>Membership Plan</th>
+                        <th style="width:130px;">Name</th>
+                        <th style="width:150px;">Email</th>
+                        <th style="width:70px;">RFID Tag #</th>
+                        <th style="width:130px;">Membership Plan</th>
                         <th style="width:140px;">Subscription Status</th>
                     </tr>
                 </thead>
