--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -21,11 +21,11 @@
             <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
                     <tr>
-                        <th style="width:130px;">Name</th>
-                        <th style="width:150px;">Email</th>
-                        <th style="width:70px;">RFID Tag #</th>
-                        <th style="width:130px;">Membership Plan</th>
-                        <th style="width:140px;">Subscription Status</th>
+                        <th style="width:130px; !important">Name</th>
+                        <th style="width:150px; !important">Email</th>
+                        <th style="width:70px; !important">RFID Tag #</th>
+                        <th style="width:130px; !important">Membership Plan</th>
+                        <th style="width:140px; !important">Subscription Status</th>
                     </tr>
                 </thead>
                 <tbody>
