--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -16,16 +16,20 @@
 	</head>
 	<body  style="background-color: #F1F1F1">
         <br>
-		<div class="container" width="80%">
+		<div class="container" style="
+    margin-right: 0px;
+    width: 230px;
+    margin-left: 0px;
+">
 
             <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
                     <tr>
-                        <th style="width:130px; !important">Name</th>
-                        <th style="width:150px; !important">Email</th>
-                        <th style="width:70px; !important">RFID Tag #</th>
-                        <th style="width:130px; !important">Membership Plan</th>
-                        <th style="width:140px; !important">Subscription Status</th>
+                        <th>Name</th>
+                        <th>Email</th>
+                        <th>RFID Tag #</th>
+                        <th>Membership Plan</th>
+                        <th>Subscription Status</th>
                     </tr>
                 </thead>
                 <tbody>
