--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -16,11 +16,7 @@
 	</head>
 	<body  style="background-color: #F1F1F1">
         <br>
-		<div class="container" style="
-    margin-right: 0px;
-    width: 1000px;
-    margin-left: 0px;
-">
+		<div class="container" style="margin-right: 0px; width: 1000px; margin-left: 0px;">
 
             <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
