--- a/front-end-pages/admin-pages/admin-header.html
+++ b/front-end-pages/admin-pages/admin-header.html
@@ -5,7 +5,7 @@
 
 	echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-header.css', __FILE__ ) . '">' . "\n";
 ?>
-<a href="admin.php?page=mas-plugin&content=1"><button class="button">Members</button></a>
+<!--<a href="admin.php?page=mas-plugin&content=1"><button class="button">Members</button></a>
 <a href="admin.php?page=mas-plugin&content=2"><button class="button">Classes</button></a>
 <a href="admin.php?page=mas-plugin&content=3"><button class="button">Access</button></a>
-<a href="admin.php?page=mas-plugin&content=4"><button class="button">Integrations</button></a>
+<a href="admin.php?page=mas-plugin&content=4"><button class="button">Integrations</button></a>-->
