--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -31,11 +31,16 @@
                         <input type="email" class="form-control" id="email" name="email" placeholder="">
                     </div>
 
-                    <div class="form-group">
+                    <div class="form-group has-error">
                         <label for="username" class="control-label" >Username:</label>
                         <div class="input-group">
-                            <input type="text" style="display: inline;" class="form-control" id="username" name="username" placeholder="">
+                            <input type="text" style="display: inline;" class="form-control" id="username"
+                                   name="username" placeholder=""
+                                   aria-describedby="username-help-block username-check-error">
                             <div class="input-group-addon">@decaturmakers.org</div>
+                            <span id="username-help-block" class="help-block">This username is already taken.</span>
+                            <span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
+                            <span id="username-check-error" class="sr-only">(error)</span>
                         </div>
                     </div>
 
