--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -34,9 +34,9 @@
                     <div class="form-group has-error">
                         <label for="username" class="control-label" >Username:</label>
                         <div class="input-group">
-                            <input type="text" style="display: inline;" class="form-control" id="username"
+                            <input type="text" style="" class="form-control" id="username"
                                    name="username" placeholder=""
-                                   aria-describedby="username-help-block username-check-error">
+                                   aria-describedby="username-help-block">
                             <div class="input-group-addon">@decaturmakers.org</div>
                             <span id="username-help-block" class="help-block">This username is already taken.</span>
                         </div>
