--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -31,10 +31,41 @@
                         <input type="email" class="form-control" id="email" name="email" placeholder="">
                     </div>
 
-                    <div class="form-group has-error">
+                    <script>
+                        function showError() {
+                            $("#username-group").addClass("has-error");
+                            $("#username-help-block").show();
+                        }
+
+                        function clearError() {
+                            $("#username-group").removeClass("has-error");
+                            $("#username-help-block").hide();
+                        }
+
+                        function checkUsername() {
+                            $.ajax({
+                                type: "GET",
+                                url: "register",
+                                data: {
+                                    "username": $('#username').text(),
+                                    "action": 'check'
+                                },
+                                dataType: "text json",
+                                success: function(resultJson) {
+                                    if (resultJson['result'] == true) {
+                                        clearError();
+                                    } else {
+                                        showError();
+                                    }
+                                }
+                            });
+                        }
+                    </script>
+
+                    <div id="username-group" class="form-group has-error">
                         <label for="username" class="control-label" >Username:</label>
                         <div class="input-group">
-                            <input type="text" style="" class="form-control" id="username"
+                            <input type="text" style="" onchange="checkUsername()" class="form-control" id="username"
                                    name="username" placeholder=""
                                    aria-describedby="username-help-block">
                             <div class="input-group-addon">@decaturmakers.org</div>
