Beginning work on frontend for username check

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -39,7 +39,7 @@
                                    aria-describedby="username-help-block">
                             <div class="input-group-addon">@decaturmakers.org</div>
                         </div>
-                        <span id="username-help-block" class="help-block">This username is already taken.</span>
+                        <span id="username-help-block" class="help-block hidden">This username is already taken.</span>
                     </div>
 
                     <script>
