Beginning work on frontend for username check

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -47,12 +47,12 @@
 
                         function showError() {
                             $("#username-group").addClass("has-error");
-                            $("#username-help-block").show();
+                            $("#username-help-block").addClass("hidden");
                         }
 
                         function clearError() {
                             $("#username-group").removeClass("has-error");
-                            $("#username-help-block").hide();
+                            $("#username-help-block").removeClass("hidden");
                         }
 
                         function checkUsername() {
