Beginning work on frontend for username check

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -60,7 +60,7 @@
                                 type: "GET",
                                 url: "register",
                                 data: {
-                                    "username": $('#username').text(),
+                                    "username": jQuery('#username').text(),
                                     "action": 'check'
                                 },
                                 dataType: "text json",
