Finished work on username check. The file that needs to have the final check code is '/front-end-pages/registration-form/username-check.php'

--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -44,9 +44,11 @@
 
                     <script>
 
+
                         function showError() {
                             jQuery("#username-group").addClass("has-error");
                             jQuery("#username-help-block").removeClass("hidden");
+                            //TODO Add submission blocker
                         }
 
                         function clearError() {
