--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -55,6 +55,8 @@ $user = getUser($_GET['email']);
             </div>
 
             <button class="mas-button" type="submit">Save Changes</button>
+
+            <input type="hidden" name="action" value="update_member">
         </form>
     </div>
 
