--- a/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
+++ b/front-end-pages/admin-pages/members-tab/member-edit/admin-members-edit.html
@@ -9,37 +9,72 @@ include_once dirname(__DIR__).'../../../resources/GSuiteAPI.php';
 
 $user = getUser($_GET['email']);
 
+$plan = $user->getCustomSchemas()['Subscription_Management']['Subscription_Type'];
+$expDate = $user->getCustomSchemas()['Subscription_Management']['Subscription_Expiration'];
+
+function isSelected($option, $target) {
+    if ($option == $target) {
+        echo "selected";
+    }
+}
+
 ?>
-        <table class="mas">
-            <tr>
-                <th colspan="3" class="mas">
-                    <div id="breadcrumb" class="mas-breadcrumb">
-                        <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >> <?php echo $user->getName()->getFullName();?>
-                    </div>
-                </th>
-            </tr>
 
-            <tr>
-                <td class="mas">
-                    <form>
+<body style="background-color: #EBEBEB">
 
-                      <div id="name">
-                        <label for="firstName" class="mas">First Name:</label>
-                        <input type="text" id="firstName" name="firstName" class="mas" value="<?php echo $user->getName()->getGivenName();?>">
-                        <br>
+    <br>
 
-                        <label class="mas">Last Name:</label>
-                        <input type="text" id="lastName" name="lastName" class="mas" value="<?php echo $user->getName()->getFamilyName();?>">
-                      </div>
-                    </form>
+    <div class="mas-title">
+        <a href="admin.php?page=mas-plugin&content=1" class="mas">Members</a> >>
+        <?php echo $user->getName()->getFullName();?>        
+    </div>
 
-                </td>
-                <td class="mas">
-                    <?php
-                        echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
-                    ?>
-                    <br>
-                    <button class="mas-save" type="submit">Save Changes</button>
-                </td>
-            </tr>
-        </table>
+    <div class="form-container col-md-6">
+        <form name="editMember" class="form-horizontal" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
+            <input type="hidden" name="username" value="<?php echo $user->getPrimaryEmail();?>">
+            
+            <div class="form-group">
+                <label for="firstName" class="control-label">First Name</label>  
+                <input required name="firstName" class="form-control" value="<?php echo $user->getName()->getGivenName();?>">
+            </div>
+
+            <div class="form-group">
+                <label for="lastName" class="control-label">Last Name</label>
+                <input required name="lastName" class="form-control" value="<?php echo $user->getName()->getFamilyName();?>">
+            </div>
+
+            <div class="form-group">
+                <label for="rfidNumber" class="control-label">RFID Number</label>
+                <input required name="rfidNumber" class="form-control" value="<?php echo $user->getCustomSchemas()['roles']['rfid-id'];?>">
+            </div>
+
+            <div class="form-group">
+                <label for="membershipPlan" class="control-label">Membership Plan</label>
+                <select class="form-control" name="membershipPlan" id="membershipPlan">
+                    <option value="basic-ind" <?php isSelected("basic-ind", $plan)?> >Individual Basic ($25/mo)</option>
+                    <option value="support-ind" <?php isSelected("support-ind", $plan)?> >Individual Supporter ($40/mo)</option>
+                    <option value="basic-fam" <?php isSelected("basic-fam", $plan)?> >Family Basic ($50/mo)</option>
+                    <option value="support-fam" <?php isSelected("support-fam", $plan)?> >Family Supporter ($75/mo)</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="subscriptionExp" class="control-label">Subscription Expiration Date</label>
+                <input required type="date" name="subscriptionExp" class="form-control" value= <?php echo $expDate; ?> >
+            </div>
+
+            <button class="mas-button" type="submit">Save Changes</button>
+
+            <input type="hidden" name="action" value="update_member">
+        </form>
+    </div>
+
+    <div id="imageContainer col-md-6">
+        <div style="text-align:center">
+            <?php
+                echo '<img class="mas" src="' . plugins_url( '../../../images/female-placeholder.png', __FILE__ ) . '" id="profilePic" alt="Profile Picture">' . "\n";
+            ?>
+        </div>
+    </div>
+
+</body>
