--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -8,7 +8,7 @@
     include_once dirname(__DIR__).'../../../resources/StripeAPI.php';
 
     $email = wp_get_current_user();
-    echo $email
+    echo $email;
     $user = getUser($email);
     $sub_mgmt = $user->getCustomSchemas()['Subscription_Management'];
     $stripe_id = !empty($sub_mgmt['Stripe_ID']) ? $sub_mgmt['Stripe_ID'] : '';
