--- a/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
+++ b/front-end-pages/admin-pages/members-tab/member-table/admin-members-table.html
@@ -1,18 +1,18 @@
-		<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
-        <link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">
- 
-		<script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
-		<script type="text/javascript" charset="utf-8">
-			$(document).ready(function() {
-				$('#member_table').DataTable( {
+<?php echo '<link rel="stylesheet" type="text/css" href="' . plugins_url( 'admin-members-table.css', __FILE__ ) . '">' . "\n"; ?>
+        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/r/bs-3.3.5/jq-2.1.4,dt-1.10.8/datatables.min.css"/>
+
+        <script type="text/javascript" src="https://cdn.datatables.net/r/bs-3.3.5/jqc-1.11.3,dt-1.10.8/datatables.min.js"></script>
+        <script type="text/javascript" charset="utf-8">
+            $(document).ready(function() {
+                $('#member_table').DataTable( {
                   "columnDefs": [
                     { "width": "20%", "targets": 0 }
                   ]
                 } );
-			} );
-		</script>
+            } );
+        </script>
         <br>
-		<div class="container" style="margin-right: 0px; width: 1000px; margin-left: 0px;">
+        <div class="container" style="margin-right: 0px; width: 1000px; margin-left: 0px;">
 
             <table id="member_table" class="table table-striped table-bordered" width="100%">
                 <thead>
@@ -28,5 +28,5 @@
                     <?php include 'admin-member-data.php'; ?>
                 </tbody>
             </table>
-            
-		</div>
+
+        </div>
