--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -47,8 +47,8 @@
                         </div>
                     </div>
 
-                    <div class="form-group">
-                        <label for="passwordMatch" class="control-label has-error" >Confirm Password:</label>
+                    <div class="form-group has-error">
+                        <label for="passwordMatch" class="control-label" >Confirm Password:</label>
                         <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required>
                     </div>
 
