--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -47,7 +47,7 @@
                         </div>
                     </div>
 
-                    <div class="form-group has-error">
+                    <div class="form-group" ng-class="{ 'has-error' : !registration.passwordMatch.$pristine}">
                         <label for="passwordMatch" class="control-label" >Confirm Password:</label>
                         <input type="password" style="display: inline;" class="form-control" id="passwordMatch" name="passwordMatch" ng-model="passwordMatch" required>
                     </div>
