--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -4,8 +4,8 @@
 
     $admin_post = admin_url( 'admin-post.php' );
 
-    require_once dirname(__DIR__).'../resources/GSuiteAPI.php';
-    require_once dirname(__DIR__).'../resources/StripeAPI.php';
+    require_once dirname(__DIR__).'/resources/GSuiteAPI.php';
+    require_once dirname(__DIR__).'/resources/StripeAPI.php';
 
     $email = wp_get_current_user()->user_email;
 
