--- a/front-end-pages/member-page/member-page.html
+++ b/front-end-pages/member-page/member-page.html
@@ -10,6 +10,9 @@
     $email = wp_get_current_user()->user_email;
 
     $user = getUser($email);
+    $firstName = $user->getName()->getGivenName();
+    $lastName = $user->getName()->getFamilyName();
+    $personalEmail = $user->getEmails()[0]['address']
     $sub_mgmt = $user->getCustomSchemas()['Subscription_Management'];
     $stripe_id = !empty($sub_mgmt['Stripe_ID']) ? $sub_mgmt['Stripe_ID'] : '';
 
@@ -66,7 +69,7 @@
                 <form id="userForm" name="projectForm" action="<?php echo admin_url( 'admin-post.php') ?>" method="post">
                    <md-input-container class="md-block">
                       <label>First Name</label>
-                      <input required name="firstName" ng-model="project.firstName" ng-disabled="!editing">
+                      <input required name="firstName" ng-model="project.firstName" ng-disabled="!editing" value="<?php echo $firstName; ?>">
                       <div ng-messages="projectForm.firstName.$error">
                          <div ng-message="required">This is required.</div>
                       </div>
@@ -84,7 +87,7 @@
                          minlength="5" maxlength="100" ng-pattern="/^.+@.+\..+$/"  ng-disabled="!editing"/>
                       <div ng-messages="projectForm.userEmail.$error" role="alert">
                          <div ng-message-exp="['required', 'minlength', 'maxlength', 'pattern']">
-                            Your email must be between 10 and 100 characters long and should be a valid email address.
+                            Your email must be between 5 and 100 characters long and should be a valid email address.
                          </div>
                       </div>
                    </md-input-container>
