--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -33,7 +33,7 @@
         });
      
     }
-    
+
     }]);
 })();
     // angular
@@ -76,7 +76,7 @@
 
     <h3>Register as Member</h3>
 
-    <div class="container" ng-app="registrationForm" ng-controller="registrationCtrl">
+    <div class="container">
         <div class="row">
             <form name="register" action="?action=review" method="POST" class="form-horizonal" novalidate>
                 <div class="col-sm-4">
