--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -125,15 +125,20 @@ angular.module('myApp.directives', [])
                         </div>
                     </div>
 
-<input type='password' id='pw1' name='pw1'
-  ng-model='pw1' ng-required/>
-<input type='password' id='pw2' name='pw2'
-  ng-model='pw2' ng-required pw-check='pw1'/>
-<div class='msg-block' ng-show='myForm.$error'>
-  <span class='msg-error' ng-show='myForm.pw2.$error.pwmatch'>
-    Passwords don't match.
-  </span>
-</div>
+                    <div class="form-group">
+                        <label class="control-label" for="pw1">Password</label>
+                        <input type='password' id='pw1' name='pw1' ng-model='pw1' ng-required/>
+                    </div>
+
+                    <div class="form-group">
+                        <label class="control-label" for="pw2">Confirm</label>
+                        <input type='password' id='pw2' name='pw2' ng-model='pw2' ng-required pw-check='pw1'/>
+                    </div>
+                    <div class='msg-block' ng-show='myForm.$error'>
+                      <span class='msg-error' ng-show='myForm.pw2.$error.pwmatch'>
+                        Passwords don't match.
+                      </span>
+                    </div>
 
 <!--                     <div class="form-group" ng-class="{ 'has-error' : !registration.password.$valid }">
                         <label for="password" class="control-label" >Password:</label>
