--- a/front-end-pages/registration-form/registration-form.html
+++ b/front-end-pages/registration-form/registration-form.html
@@ -98,7 +98,7 @@ angular.module('myApp.directives', [])
 
     <h3>Register as Member</h3>
 
-    <div class="container" ng-app="myApp">
+    <div class="container" ng-app="myApp" ng-contoller="stageController">
         <div class="row">
             <form name="register" action="?action=review" method="POST" class="form-horizonal" novalidate>
                 <div class="col-sm-4">
@@ -127,12 +127,16 @@ angular.module('myApp.directives', [])
 
                     <div class="form-group">
                         <label class="control-label" for="pw1">Password</label>
-                        <input type='password' id='pw1' name='pw1' ng-model='pw1' ng-required/>
+                        <div class="input-group">
+                            <input type='password' id='pw1' name='pw1' ng-model='pw1' ng-required/>
+                        </div>
                     </div>
 
                     <div class="form-group">
                         <label class="control-label" for="pw2">Confirm</label>
-                        <input type='password' id='pw2' name='pw2' ng-model='pw2' ng-required pw-check='pw1'/>
+                        <div class="input-group">
+                            <input type='password' id='pw2' name='pw2' ng-model='pw2' ng-required pw-check='pw1'/>
+                        </div>
                     </div>
                     <div class='msg-block' ng-show='myForm.$error'>
                       <span class='msg-error' ng-show='myForm.pw2.$error.pwmatch'>
